# ikuro

./: README.md
ikuro_control/: CMakeLists.txt  package.xml
ikuro_control/launch/: control.launch  teleop.launch
ikuro_description/: CMakeLists.txt  package.xml
ikuro_description/env-hooks/: 50.ikuro_description.sh
ikuro_description/launch/: description.launch
ikuro_description/urdf/: description.xacro~
ikuro_msgs/: CMakeLists.txt  package.xml
ikuro_navigation/: CMakeLists.txt  package.xml
ikuro_navigation/config/: costmap_common.yaml
ikuro_navigation/launch/: ,  amcl.launch  amcl_demo.launch  exploration.launch  exploration_demo.launch  gmapping.launch  gmapping_demo.launch  grid_loader.launch  hokuyo.launch  hokuyo_front.launch  ikuro_navigation.launch  kinect.launch  lms200.launch  move_base.launch  move_base_mapless_demo.launch  xsens.launch
