<?xml version="1.0"?>
<package>
  <name>ikuro_description</name>
  <version>0.1.0</version>
  <description>IKURO Husky URDF description</description>

  <author email="osencan@itu.edu.tr">Onur Sencan</author>
  <maintainer email="osencan@itu.edu.tr">Onur Sencan</maintainer>


  <url type="website">http://robotics.itu.edu.tr</url>
  <url type="bugtracker">https://github.com/ituroboticslab/ikuro/issues</url>
  <url type="repository">https://github.com/ituroboticslab/ikuro</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>ur_description</run_depend>


  <export>
  </export>
</package>